// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`col renders 0.5 offset col styles 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexDirection": "column",
  "justifyContent": "space-between",
  "marginLeft": "50%",
  "padding": "0.5em",
}
`;

exports[`col renders 0.5 xs offset col styles 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexDirection": "column",
  "justifyContent": "space-between",
  "marginLeft": "50%",
  "padding": "0.5em",
}
`;

exports[`col renders default col styles 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexDirection": "column",
  "justifyContent": "space-between",
  "padding": "0.5em",
}
`;

exports[`col renders reverse col styles 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexDirection": "column-reverse",
  "justifyContent": "space-between",
  "padding": "0.5em",
}
`;

exports[`col renders size 0.5 and offset 0.5 width at sm and size 1 offset 0 at xs 1`] = `
Object {
  "@media (min-width: 36em)": Object {
    "flexBasis": "50%",
    "marginLeft": "50%",
    "maxWidth": "50%",
  },
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexBasis": "100%",
  "flexDirection": "column",
  "justifyContent": "space-between",
  "marginLeft": "0%",
  "maxWidth": "100%",
  "padding": "0.5em",
}
`;

exports[`col renders size md auto col styles 1`] = `
Object {
  "@media (min-width: 48em)": Object {
    "flexBasis": 0,
    "flexGrow": 1,
    "maxWidth": "100%",
  },
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexDirection": "column",
  "justifyContent": "space-between",
  "padding": "0.5em",
}
`;

exports[`col renders size xs 0.5 col styles 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "boxSizing": "border-box",
  "display": "flex",
  "flex": "0 0 auto",
  "flexBasis": "50%",
  "flexDirection": "column",
  "justifyContent": "space-between",
  "maxWidth": "50%",
  "padding": "0.5em",
}
`;
